[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/dialogic/Editor/Pieces/AudioBlock.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogic/Images/audio-event.svg" type="Texture" id=3]
[ext_resource path="res://addons/dialogic/Editor/Pieces/Common/PieceExtraSettings.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/dialogic/Images/play.svg" type="Texture" id=5]
[ext_resource path="res://addons/dialogic/Editor/Pieces/Common/DragController.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 16.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.580392, 0.286275, 0.227451, 0.447059 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.12549, 0.12549, 0.12549, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="AudioBlock" type="HBoxContainer"]
margin_right = 1798.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 9
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Indent" type="Control" parent="."]
visible = false
margin_left = 6.0
margin_top = 6.0
margin_right = 1792.0
margin_bottom = 36.0

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1798.0
margin_bottom = 42.0
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 16.0
margin_top = 6.0
margin_right = 1792.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="Header" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 1776.0
margin_bottom = 28.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/Header"]
margin_right = 22.0
margin_bottom = 28.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer/Header"]
margin_left = 26.0
margin_top = 7.0
margin_right = 83.0
margin_bottom = 21.0
text = "  Audio   "

[node name="Name" type="Label" parent="PanelContainer/VBoxContainer/Header"]
margin_left = 87.0
margin_top = 7.0
margin_right = 87.0
margin_bottom = 21.0

[node name="ButtonAudio" type="Button" parent="PanelContainer/VBoxContainer/Header"]
margin_left = 91.0
margin_right = 115.0
margin_bottom = 28.0
text = "..."

[node name="ButtonPreviewPlay" type="Button" parent="PanelContainer/VBoxContainer/Header"]
margin_left = 119.0
margin_right = 153.0
margin_bottom = 28.0
disabled = true
icon = ExtResource( 5 )

[node name="Preview" type="Label" parent="PanelContainer/VBoxContainer/Header"]
visible = false
margin_left = 103.0
margin_top = 8.0
margin_right = 131.0
margin_bottom = 22.0
custom_colors/font_color = Color( 1, 1, 1, 0.513726 )
text = "    ..."

[node name="Spacer" type="Control" parent="PanelContainer/VBoxContainer/Header"]
margin_left = 157.0
margin_right = 1735.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="OptionButton" parent="PanelContainer/VBoxContainer/Header" instance=ExtResource( 4 )]
margin_left = 1739.0
margin_right = 1776.0
margin_bottom = 28.0
items = [ "Move Up", null, 0, false, false, 0, 0, null, "", false, "Move Down", null, 0, false, false, 1, 0, null, "", false, "", null, 0, false, false, 2, 0, null, "", true, "Remove", null, 0, false, false, 3, 0, null, "", false ]

[node name="AudioPreview" type="AudioStreamPlayer" parent="PanelContainer"]

[node name="DragController" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="PanelContainer/VBoxContainer/Header/ButtonAudio" to="." method="_on_ButtonAudio_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Header/ButtonPreviewPlay" to="." method="_on_ButtonPreviewPlay_pressed"]
[connection signal="finished" from="PanelContainer/AudioPreview" to="." method="_on_AudioPreview_finished"]
